--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0036)https://themewagon.github.io/patrix/ -->
+<!-- saved from url=(0036) -->
 <html lang="en">
 
 <head>
@@ -26,7 +26,7 @@
 /////////////////////////////////////////////////////////////////////////////////////////////-->
   <nav class="navbar navbar-expand-lg navbar-dark menu shadow fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="https://themewagon.github.io/patrix/">
+      <a class="navbar-brand" href="">
         <img src="./assets/logo.png" alt="logo image" />
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -37,22 +37,25 @@
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page"
-              href="https://themewagon.github.io/patrix/index.html">Home</a>
+              href="#home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://themewagon.github.io/patrix/#services">Services</a>
+            <a class="nav-link" href="#services">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://themewagon.github.io/patrix/#testimonials">Testimonials</a>
+            <a class="nav-link" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://themewagon.github.io/patrix/#faq">faq</a>
+            <a class="nav-link" href="#testimonials">Testimonials</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://themewagon.github.io/patrix/#portfolio">portfolio</a>
+            <a class="nav-link" href="#faq">faq</a>
           </li>
+          <!-- <li class="nav-item">
+            <a class="nav-link" href="#portfolio">portfolio</a>
+          </li> -->
           <li class="nav-item">
-            <a class="nav-link" href="https://themewagon.github.io/patrix/#contact">contact</a>
+            <a class="nav-link" href="#contact">contact</a>
           </li>
         </ul>
         <button type="button" class="rounded-pill btn-rounded">
@@ -90,7 +93,7 @@
         <div class="col-md-6 intros text-end">
           <div class="video-box">
             <img src="./assets/intro-section-illustration.png" alt="video illutration" class="img-fluid" />
-            <a href="https://themewagon.github.io/patrix/#"
+            <a href="#"
               class="glightbox position-absolute top-50 start-50 translate-middle">
               <span>
                 <i class="fas fa-play-circle"></i>
@@ -265,8 +268,12 @@
   <!-- ////////////////////////////////////////////////////////////////////////////////////////////////
                                START SECTION Extra - THE About Section  
 /////////////////////////////////////////////////////////////////////////////////////////////////////-->
-  <section class="gradient-custom">
-
+  <section class="gradient-custom m-10" id="about">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#B430EC" fill-opacity="1"
+        d="M0,96L48,128C96,160,192,224,288,213.3C384,203,480,117,576,117.3C672,117,768,203,864,202.7C960,203,1056,117,1152,117.3C1248,117,1344,203,1392,245.3L1440,288L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
+      </path>
+    </svg>
     <div class="py-5 team4">
       <div class="container">
         <div class="row justify-content-center mb-4">
@@ -1136,7 +1143,7 @@
             </svg>
           </div>
           <div class="contact-box__info">
-            <a href="https://themewagon.github.io/patrix/#" class="contact-box__info--title">+1 728365413</a>
+            <a href="#" class="contact-box__info--title">+1 728365413</a>
             <p class="contact-box__info--subtitle">Mon-Fri 9am-6pm</p>
           </div>
         </div>
@@ -1153,7 +1160,7 @@
             </svg>
           </div>
           <div class="contact-box__info">
-            <a href="https://themewagon.github.io/patrix/#" class="contact-box__info--title">info@company.com</a>
+            <a href="#" class="contact-box__info--title">info@company.com</a>
             <p class="contact-box__info--subtitle">Online support</p>
           </div>
         </div>
@@ -1171,7 +1178,7 @@
             </svg>
           </div>
           <div class="contact-box__info">
-            <a href="https://themewagon.github.io/patrix/#" class="contact-box__info--title">New York, USA</a>
+            <a href="#" class="contact-box__info--title">New York, USA</a>
             <p class="contact-box__info--subtitle">NY 10012, US</p>
           </div>
         </div>
@@ -1186,11 +1193,11 @@
             connect with us on social media
           </div>
           <div class="col-lg-7 col-md-6">
-            <a href="https://themewagon.github.io/patrix/#"><i class="fab fa-facebook"></i></a>
-            <a href="https://themewagon.github.io/patrix/#"><i class="fab fa-twitter"></i></a>
-            <a href="https://themewagon.github.io/patrix/#"><i class="fab fa-github"></i></a>
-            <a href="https://themewagon.github.io/patrix/#"><i class="fab fa-linkedin"></i></a>
-            <a href="https://themewagon.github.io/patrix/#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-github"></i></a>
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
           </div>
         </div>
       </div>
@@ -1213,16 +1220,16 @@
           <hr class="bg-white d-inline-block mb-4" style="width: 60px; height: 2px" />
           <ul class="list-inline campany-list">
             <li>
-              <a href="https://themewagon.github.io/patrix/#">Lorem ipsum</a>
+              <a href="#">Lorem ipsum</a>
             </li>
             <li>
-              <a href="https://themewagon.github.io/patrix/#">Lorem ipsum</a>
+              <a href="#">Lorem ipsum</a>
             </li>
             <li>
-              <a href="https://themewagon.github.io/patrix/#">Lorem ipsum</a>
+              <a href="#">Lorem ipsum</a>
             </li>
             <li>
-              <a href="https://themewagon.github.io/patrix/#">Lorem ipsum</a>
+              <a href="#">Lorem ipsum</a>
             </li>
           </ul>
         </div>
@@ -1231,16 +1238,16 @@
           <hr class="bg-white d-inline-block mb-4" style="width: 60px; height: 2px" />
           <ul class="list-inline campany-list">
             <li>
-              <a href="https://themewagon.github.io/patrix/#">
+              <a href="#">
                 Your Account</a>
             </li>
             <li>
-              <a href="https://themewagon.github.io/patrix/#">Become an Affiliate</a>
+              <a href="#">Become an Affiliate</a>
             </li>
             <li>
-              <a href="https://themewagon.github.io/patrix/#">create an account</a>
+              <a href="#">create an account</a>
             </li>
-            <li><a href="https://themewagon.github.io/patrix/#">Help</a></li>
+            <li><a href="#">Help</a></li>
           </ul>
         </div>
         <div class="col-12 col-sm-6 col-lg-2 mb-4 mx-auto">
@@ -1248,16 +1255,16 @@
           <hr class="bg-white d-inline-block mb-4" style="width: 60px; height: 2px" />
           <ul class="list-inline campany-list">
             <li>
-              <a href="https://themewagon.github.io/patrix/#">Lorem ipsum</a>
+              <a href="#">Lorem ipsum</a>
             </li>
             <li>
-              <a href="https://themewagon.github.io/patrix/#">Lorem ipsum</a>
+              <a href="#">Lorem ipsum</a>
             </li>
             <li>
-              <a href="https://themewagon.github.io/patrix/#">Lorem ipsum</a>
+              <a href="#">Lorem ipsum</a>
             </li>
             <li>
-              <a href="https://themewagon.github.io/patrix/#">Lorem ipsum</a>
+              <a href="#">Lorem ipsum</a>
             </li>
           </ul>
         </div>
@@ -1271,7 +1278,7 @@
           <div class="col-12">
             <div class="footer-bottom__copyright">
               © Copyright 2021
-              <a href="https://themewagon.github.io/patrix/#">Company</a> |
+              <a href="#">Company</a> |
               Created by
               <a href="http://codewithpatrick.com/" target="_blank">Muriungi</a><br /><br />
 
@@ -1285,7 +1292,7 @@
   </footer>
 
   <!-- BACK TO TOP BUTTON  -->
-  <a href="https://themewagon.github.io/patrix/#" class="shadow btn-primary rounded-circle back-to-top">
+  <a href="#" class="shadow btn-primary rounded-circle back-to-top">
     <i class="fas fa-chevron-up"></i>
   </a>
 
