fetch code update and sweetalert

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <link rel="stylesheet" href="./Styles/glightbox.min.css" />
   <script src="./Styles/glightbox.min.js.download"></script>
   <link href="./Styles/style.css" rel="stylesheet" />
+
+  <!-- Sweet Alert -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
  
    
 
