--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
           <!-- <li class="nav-item">
             <a class="nav-link" href="#testimonials">Testimonials</a>
           </li> -->
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="#faq">faq</a>
-          </li>
+          </li> -->
           <!-- <li class="nav-item">
             <a class="nav-link" href="#portfolio">portfolio</a>
           </li> -->
@@ -942,7 +942,7 @@
   <!-- /////////////////////////////////////////////////////////////////////////////////////////////////
                        START SECTION 6 - THE FAQ 
 //////////////////////////////////////////////////////////////////////////////////////////////////////-->
-  <section id="faq" class="faq">
+  <!-- <section id="faq" class="faq">
     <div class="container">
       <div class="row text-center">
         <h1 class="display-3 fw-bold text-uppercase">faq</h1>
@@ -951,11 +951,11 @@
           frequently asked questions, get knowledge befere hand
         </p>
       </div>
-      <!-- ACCORDION CONTENT  -->
+      <!-- ACCORDION CONTENT  
       <div class="row mt-5">
         <div class="col-md-12">
           <div class="accordion" id="accordionExample">
-            <!-- ACCORDION ITEM 1 -->
+            <!-- ACCORDION ITEM 1 
             <div class="accordion-item shadow mb-3">
               <h2 class="accordion-header" id="headingOne">
                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
@@ -977,7 +977,7 @@
                 </div>
               </div>
             </div>
-            <!-- ACCORDION ITEM 2 -->
+            <!-- ACCORDION ITEM 2 
             <!-- <div class="accordion-item shadow mb-3">
               <h2 class="accordion-header" id="headingTwo">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -999,8 +999,8 @@
                   transition does limit overflow.
                 </div>
               </div>
-            </div> -->
-            <!-- ACCORDION ITEM 3 -->
+            </div> 
+            <!-- ACCORDION ITEM 3 
             <!-- <div class="accordion-item shadow mb-3">
               <h2 class="accordion-header" id="headingThree">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -1022,8 +1022,8 @@
                   transition does limit overflow.
                 </div>
               </div>
-            </div> -->
-            <!-- ACCORDION ITEM 4 -->
+            </div> 
+            <!-- ACCORDION ITEM 4 
             <!-- <div class="accordion-item shadow mb-3">
               <h2 class="accordion-header" id="headingFour">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -1045,12 +1045,12 @@
                   transition does limit overflow.
                 </div>
               </div>
-            </div> -->
+            </div> 
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- ///////////////////////////////////////////////////////////////////////////////////////////////////
                               START SECTION 7 - THE PORTFOLIO  
