--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#product">Products</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="#future">Future Plans</a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" href="#about">About</a>
           </li>
@@ -78,6 +78,8 @@
     </div>
   </nav>
 
+
+  
   <!-- /////////////////////////////////////////////////////////////////////////////////////////////////
                             START SECTION 2 - THE INTRO SECTION  
 /////////////////////////////////////////////////////////////////////////////////////////////////////-->
@@ -312,7 +314,7 @@
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-center">
           <div class="services__pic">
-            <img src="./assets/grupverse.png" alt="web development illustration" class="img-fluid"/>
+            <img src="./assets/banner.png" alt="web development illustration" class="img-fluid"/>
           </div>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
@@ -322,7 +324,7 @@
             <p class="lh-lg">
               Grupverse is the one stop social media platform for teams. It is the platform for like
               minded peoples to meet, interact, collaborate and work on projects. To learn more visit
-              <a href="https://grupverse.com">https://grupverse.com</a> 
+              <strong>Link: </strong><a href="https://grupverse.com"><strong>https://grupverse.com</strong></a> 
             </p>
           </div>
         </div>
@@ -335,7 +337,7 @@
   <!-- ////////////////////////////////////////////////////////////////////////////////////////////////
   START SECTION Extra - Future plans
   /////////////////////////////////////////////////////////////////////////////////////////////////////-->
-  <section id="future" class="services">
+  <!-- <section id="future" class="services">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path fill="#B430EC" fill-opacity="1"
         d="M0,96L48,128C96,160,192,224,288,213.3C384,203,480,117,576,117.3C672,117,768,203,864,202.7C960,203,1056,117,1152,117.3C1248,117,1344,203,1392,245.3L1440,288L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
@@ -347,9 +349,9 @@
         <h1 class="display-3 fw-bold">Our Future projects and plans</h1>
         <div class="heading-line mb-1"></div>
       </div>
-      <!-- START THE DESCRIPTION CONTENT  -->
+      <!-- START THE DESCRIPTION CONTENT 
       <div class="row pt-2 pb-2 mt-0 mb-3">
-        <div class="col-md-6"> <!-- Removed border-right -->
+        <div class="col-md-6"> <!-- Removed border-right --
           <div class="bg-white p-3">
             <h2 class="fw-bold text-capitalize text-center">
               We believe in building innovative products to expand the horizon of science, technology and humanity.
@@ -359,10 +361,10 @@
       </div>
     </div>
 
-    <!-- START THE CONTENT FOR THE SERVICES  -->
+    <!-- START THE CONTENT FOR THE SERVICES  --
     <div class="container">
     
-      <!-- START THE WEB DEVELOPMENT CONTENT  -->
+      <!-- START THE WEB DEVELOPMENT CONTENT  --
       <!-- <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-start">
           <div class="services__pic">
@@ -380,10 +382,10 @@
             </p>
           </div>
         </div>
-      </div> -->
+      </div> 
 
     </div>
-  </section>
+  </section> -->
   <!-- ////////////////////////////////////////////////////////////////////////////////////////////////
                                START SECTION Extra - THE About Section  
 /////////////////////////////////////////////////////////////////////////////////////////////////////-->
@@ -409,7 +411,7 @@
             <!-- Row -->
             <div class="row">
               <div class="col-md-12 img">
-                <img src="./assets/img1.jpg" alt="wrapkit"
+                <img src="./assets/suvro.jpg" alt="wrapkit"
                   class="img-fluid rounded-circle" width="180px"/>
               </div>
               <div class="col-md-12 text-center">
@@ -421,14 +423,13 @@
                     
                   </p>
                   <ul class="list-inline">
-                    <li class="list-inline-item"><a href="#" class="text-decoration-none d-block px-1"><i
-                          class="icon-social-facebook"></i></a></li>
-                    <li class="list-inline-item"><a href="#" class="text-decoration-none d-block px-1"><i
+                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/suvradeep-chakraborty-5262a2198/" class="text-decoration-none d-block px-1" target="_blank"><i class="fa-brands fa-linkedin fa-2x"></i></a></li>
+                    <!-- <li class="list-inline-item"><a href="#" class="text-decoration-none d-block px-1"><i
                           class="icon-social-twitter"></i></a></li>
                     <li class="list-inline-item"><a href="#" class="text-decoration-none d-block px-1"><i
                           class="icon-social-instagram"></i></a></li>
                     <li class="list-inline-item"><a href="#" class="text-decoration-none d-block px-1"><i
-                          class="icon-social-behance"></i></a></li>
+                          class="icon-social-behance"></i></a></li> -->
                   </ul>
                 </div>
               </div>
@@ -441,7 +442,7 @@
             <!-- Row -->
             <div class="row">
               <div class="col-md-12 img">
-                <img src="./assets//img2.jpg" alt="wrapkit"
+                <img src="./assets/ritu.jpg" alt="wrapkit"
                   class="img-fluid rounded-circle" width="180px"/>
               </div>
               <div class="col-md-12 text-center">
@@ -453,14 +454,14 @@
                     manuscripts.                    
                   </p>
                   <ul class="list-inline">
-                    <li class="list-inline-item"><a href="#" class="text-decoration-none d-block px-1"><i
+                    <!-- <li class="list-inline-item"><a href="#" class="text-decoration-none d-block px-1"><i
                           class="icon-social-facebook"></i></a></li>
                     <li class="list-inline-item"><a href="#" class="text-decoration-none d-block px-1"><i
                           class="icon-social-twitter"></i></a></li>
                     <li class="list-inline-item"><a href="#" class="text-decoration-none d-block px-1"><i
-                          class="icon-social-instagram"></i></a></li>
-                    <li class="list-inline-item"><a href="#" class="text-decoration-none d-block px-1"><i
-                          class="icon-social-behance"></i></a></li>
+                          class="icon-social-instagram"></i></a></li> -->
+                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/ritu-lahkar-b49979224/" class="text-decoration-none d-block px-1" target="_blank">
+                      <i class="fa-brands fa-linkedin fa-2x"></i></a></li>
                   </ul>
                 </div>
               </div>
