--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
           <div class="services__content">
             <div class="icon d-block fas fa-code"></div>
-            <h3 class="display-3--title mt-1">web development</h3>
+            <h3 class="display-3--title mt-1">Web Development and Depolyment</h3>
             <p class="lh-lg">
               We provide comprehensive web development and deployment services to businesses of all sizes, specializing in website design and development, content management systems, e-commerce solutions, web application development, mobile responsive design, and website deployment. Our experienced team of developers and designers work closely with our clients to create customized, user-friendly websites that meet their specific needs. We are committed to delivering high-quality web development and deployment services that exceed our clients' expectations and ensure their online success. 
             </p>
